# realtime-defender

./: Cargo.toml  README.md  sha256_definitions.json
src/: analyzer.rs  definitions.rs  main.rs
test_files/: main  malware  scanf  scanf.c  suspicious_strings  suspicious_strings.c
