[package]
name = "realtime-defender"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inotify = "0.10.0"
log = "0.4.17"
env_logger = "0.10.0"
sha256 = "1.1.3"
file-format = "0.16.0"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
elf = "0.7.2"
regex = "1.8.1"
